<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SinoMoGoConnectDemo_V1.4</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
   	
    <string name="share_title">单个分享</string>
    
    <string name="wechat_title">微信</string>
     <string name="wechat_friend">好友</string>
      <string name="wechat_group">朋友圈</string>
      <string name="select_share_title">请定制分享功能</string>
      <string name="ok">确定</string>
      <string name="cancel">取消</string>
      <string name="share_success">Share Success</string>
    <string name="share_failed">Share Failed</string>
    <string name="share_cancel">Share cancel</string>

    
    <!-- 分享设置 start -->
      <string name="sina">新浪微博</string>
      <string name="tencent">腾讯微博</string>
      <string name="renren">人人</string>
     <string name="no_internet">无网络连接！</string>
    <!-- 分享设置 end -->
</resources>