<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/content_bg"
     >

<ScrollView  android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    >
   <LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"  android:orientation="vertical">
    
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="分享方式"
                android:textColor="#ffffff"
                android:textSize="22sp" />
       
    <Button
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:onClick="toShare"
        android:text="定制分享" >
    </Button>
    
    <TextView  android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_title"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    
    <Button
         android:layout_width="120dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:onClick="toSina"
        android:text="@string/sina" />
        
     <Button
         android:layout_width="120dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:onClick="toTencent"
        android:text="@string/tencent" />
        
     <Button
         android:layout_width="120dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:onClick="toRenRen"
        android:text="@string/renren" />
     
     <TextView  android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wechat_title"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
     
     <Button
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:onClick="toFriend"
        android:text="@string/wechat_friend" />
     
      <Button
         android:layout_width="120dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:onClick="toGroup"
        android:text="@string/wechat_group" />
       
   </LinearLayout>
   
    </ScrollView>
</LinearLayout>